tests/NormalTests/paczka1/small_fuzzy/76409504.err
Error in line 6: 3du4pT2O S536 37,42
Error in line 3: A362 S536 17,7
Error in line 5: 3du4pT2O A683 7,7
Error in line 9: 3du4pT2O S536 174,8
